# exam_Langchain_LLMOps_correction

./: .env  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/adv_langchain/: chains.py  logger.py  parser.py  prompts.py  streamlit.py
app/adv_langchain/api_auth/: Dockerfile  main.py  requirements.txt
app/adv_langchain/api_llm/: Dockerfile  chains.py  main.py  prompts.py  requirements.txt
app/adv_langchain/llm/: __init__.py  chains.py  langsmith.py  llm.py  memory.py  parser.py  prompts.py
app/adv_langchain/streamlit/: Dockerfile  streamlit.py
app/basic_langchain/: chain.py  chains.py  logger.py  memory.py  parser.py  prompt.py
app/basic_langchain/api/: main.py
app/src/: chains.py  logger.py  memory.py  parser.py  prompt.py  prompts.py
mlruns/0/: meta.yaml
src/: Dockerfile.streamlit  app.py  requirements.txt
src/api/assistant/: Dockerfile.main  main.py  requirements.txt
src/api/authentification/: Dockerfile.auth  auth.py  requirements.txt
src/core/: chains.py  parsers.py
src/memory/: memory.py
src/prompts/: prompts.py
